--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
     <body>
         <br><br>
-        
+        <h1 class="chrome">Galdera</h1>
+        <h3 class="dreams">Teorikuak</h3>
         <br>
         <div class="product_wrap">
         
