--- a/Aiketak/ariketak.html
+++ b/Aiketak/ariketak.html
@@ -1,5 +1,6 @@
 <link href="https://fonts.googleapis.com/css?family=Comfortaa:700" rel="stylesheet">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="ariketak.css">
 
 <div class="main-wrapper">
     <div class="badge yellow">
