--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                 <p>Abiadura posizioaren derbiatua denez<i style="color:coral">(v = dx/dt)</i> eta azelerazioa abiaduraren deribatua denez
                 <i style="color:coral">(a = dv/dt)</i> :</p>
                 <br><br><table width="60%" align="center">
-                  <td width="50%" align="center"><p>Abiadura: <i style="color:coral">$$ {Aw cos= wt+φ_0} $$</i></p></td>
-                  <td width="50%" align="center"><p>Azelerazioa: <i style="color:coral">$$ {-Aw^2 sin= wt+φ_0} $$</i></p></td>
+                  <td width="50%" align="center"><p>Abiadura: <i style="color:coral">$$ {v = Aw cos (wt+φ_0)} $$</i></p></td>
+                  <td width="50%" align="center"><p>Azelerazioa: <i style="color:coral">$$ {a = -Aw^2 sin (wt+φ_0)} $$</i></p></td>
                 </table>
                 <p><b style="color:coral">Kontuan izan ⇝</b> Masa lerro zuzen baten higitzen denez, hau da, kurbarik ez dagoenez, 
                   bere azelerazioa tangentziala izango dela.</p>
