--- a/Aiketak/ariketak.html
+++ b/Aiketak/ariketak.html
@@ -3,10 +3,10 @@
 <link rel="stylesheet" href="ariketak.css">
 
 <div class="main-wrapper">
-    <div class="badge yellow">
+    <a target="_blank" href="https://drive.google.com/drive/folders/1fMc0n-eiS4rNEeMCFX1szTiwG9ThDWCN"><div class="badge yellow">
         <div class="circle"> <i class="fa">1</i></div>
         <div class="ribbon">Ariketak 1</div>
-    </div>
+        </div></a>
     <div class="badge orange">
         <div class="circle"> <i class="fa ">2</i></div>
         <div class="ribbon">Ariketak 2</div>
