--- a/HTML/1.3ebaluazioa.html
+++ b/HTML/1.3ebaluazioa.html
@@ -13,7 +13,8 @@
         <h1 style="font-size: 100px;">Uhin mekanikoak gaur egun</h1>
         <blockquote><blockquote>
             <h3 style="color: #adadad;">&nbsp&nbsp&nbsp Doppler efektua</h3>
-            <p>
+            <p>Hiru dimentsiotako uhinak sortzen dituen iturria higitzen denean gertatzen da.
+              Iturria mugitzen denez uhinek ez dute hasiera puntu berdina izango, eta beraz, jatorri desberdinetatik hedatuko direnez, iturria higitzen den norabidean uhinak pilatu egingo dira, eta bestean aldiz sakabanatuago egongo dira. Uhinak pilatuta dituen aldeak uhin luzera txikiagoa duenez frekuentzia handiagoa dauka, eta besteak aldiz, uhin luzera handiago eta frekuentzia txikiagoak ditu.
             </p>
             <br><br><br>
 
