Update and rename 1.4.ebaluazioa.html to 1.4ebaluazioa.html

--- a/HTML/1.4ebaluazioa.html
+++ b/HTML/1.4ebaluazioa.html
@@ -2,6 +2,8 @@
 
 <html>
     <head>
+        <title>Fisika</title>
+        <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/2497/2497631.png">
         <link rel="stylesheet" href="..\fisika.css">
         <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
@@ -13,11 +15,38 @@
         <h1 style="font-size: 100px;">Argiaren hedapena</h1>
         <blockquote><blockquote>
             <h3 style="color: #fcdd56;">&nbsp&nbsp&nbsp Argiaren abiadura</h3>
-            <p>
+            <p>Argiaren uhinak lerro zuzenetan hedatzen dira.
+              <br><br><b style="color: #ffe77d;">Argiaren abiadura:</b> 3·10⁸ m/s - Ingurune hutsean
+              <br>Ingurune materialetan oztopoak jartzen zaizkio beraz motelago hedatzen da argia.
+              <br><br><b style="color: #ffe77d;">Ingurune baten errefrakio indizea (n)</b> argiak hutsean eta beste ingurune horretan hedatzen
+              den abiaduren arteko erlazioa da.
+              <br><b style="color: #ffe77d;">n=c/v</b>
+              <br>c: abiadura ingurune hutsean.
+              <br>v: abiadura ingurune horretan.
             </p>
             <br><br><br>
 
             <h3 style="color: #fcdd56;">&nbsp&nbsp&nbsp Islapena eta errefrakzioa</h3>
+            <p><table width="100%">
+              <td width="20%"><img src="..\Irudiak/ahatea.jpg" width="90%"></td>
+              <td width="30%"><p>Argiaren uhin erasotzailea bi ingurunen arteko mugara iristen denean bitan banatzen da. Zati bat islatu egiten da izpi 
+                islatua sortuz, eta bestea bigarren ingurunean hedatzen da izpi errefraktatua sortuz.</p></td>
+              <td width="20%"><img src="..\Irudiak/Errefrakzioa.png" width="90%"></td>
+            </table>
+           </p><p>
+             Hiru lege daude errefrakzioarekin lotuta:
+             <ul>
+              <li>&nbsp&nbsp&nbsp <b style="color: #ffec3e;">⇨ 1 legea:</b> Uhin denak plano berean daude. (Uhin erasotzaileak eta zuzen normalak osatzen dutena)</li>
+              <li>&nbsp&nbsp&nbsp <b style="color: #ffec3e;">⇨ 2 legea:</b> Uhin erasotzailearen eta islatutakoaren angeluak berdinak dira. 
+                <b style="color: #ffec3e;">e=r</b></li>
+              <li>&nbsp&nbsp&nbsp <b style="color: #ffec3e;">⇨ Snell legea:</b> Eraso eta errefrakzio uhinen arteko erlazioa: 
+                <b style="color: #ffec3e;">n<sub>e</sub>·sin(e) = n<sub>r</sub>·sin(r)</b></li>
+            </ul></p><p>
+            Argiaren erradiazioa berdina da edozein ingurunetan. Uhin luzeera, aldiz, aldatu egiten da ingurune materialetan argi uhinak pilatzen direlako.
+            <i style="color:#ffec3e">$$ {n = \frac{c}{v}= \frac{λ_0f}{λf}= \frac{λ_0}{λ}} $$</i>
+            Hutsean argiaren abiadura berdina da edozein uhin luzerarentzat, ingurune materialetan aldiz abiadura uhin luzeraren menpe dago. Honela gertatzen dira, 
+            besteak beste, ostadarrak.
+           </p>
             <br><br><br>
 
             <h3 style="color: #fcdd56;">&nbsp&nbsp&nbsp Argiaren izaera</h3>
