--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                       
                   </li>
                   <li class="opzinuak">
-                      <a href="HTML/1.4ebaluzioa.html">
+                      <a href="HTML/1.4ebaluazioa.html">
                         <i><img src="https://image.flaticon.com/icons/png/512/1833/1833396.png"></i>
                           <span class="titulua">
                             
