--- a/HTML/1.3ebaluazioa.html
+++ b/HTML/1.3ebaluazioa.html
@@ -12,23 +12,63 @@
     <body>
 
         <br><br>
-        <h1 style="font-size: 100px;">Uhin mekanikoak gaur egun</h1>
+        <h1 style="font-size: 100px;">Argiaren hedapena</h1>
         <blockquote><blockquote>
-            <h3 style="color: #adadad;">&nbsp&nbsp&nbsp Doppler efektua</h3>
-            <p>Hiru dimentsiotako uhinak sortzen dituen iturria higitzen denean gertatzen da.
-              Iturria mugitzen denez uhinek ez dute hasiera puntu berdina izango, eta beraz, jatorri desberdinetatik hedatuko direnez, iturria higitzen den norabidean uhinak pilatu egingo dira, eta bestean aldiz sakabanatuago egongo dira. Uhinak pilatuta dituen aldeak uhin luzera txikiagoa duenez frekuentzia handiagoa dauka, eta besteak aldiz, uhin luzera handiago eta frekuentzia txikiagoak ditu.
+            <h3 style="color: #fcdd56;">&nbsp&nbsp&nbsp Argiaren abiadura</h3>
+            <p>Argiaren uhinak lerro zuzenetan hedatzen dira.
+              <br><br><b style="color: #ffe77d;">Argiaren abiadura:</b> 3·10⁸ m/s - Ingurune hutsean
+              <br>Ingurune materialetan oztopoak jartzen zaizkio beraz motelago hedatzen da argia.
+              <br><br><b style="color: #ffe77d;">Ingurune baten errefrakio indizea (n)</b> argiak hutsean eta beste ingurune horretan hedatzen
+              den abiaduren arteko erlazioa da.
+              <br><b style="color: #ffe77d;">n=c/v</b>
+              <br>c: abiadura ingurune hutsean.
+              <br>v: abiadura ingurune horretan.
             </p>
             <br><br><br>
 
-            <h3 style="color: #adadad;">&nbsp&nbsp&nbsp Soinua</h3>
+            <h3 style="color: #fcdd56;">&nbsp&nbsp&nbsp Islapena eta errefrakzioa</h3>
+            <p><table width="100%">
+              <td width="20%"><img src="..\Irudiak/ahatea.jpg" width="90%"></td>
+              <td width="30%"><p>Argiaren uhin erasotzailea bi ingurunen arteko mugara iristen denean bitan banatzen da. Zati bat islatu egiten da izpi 
+                islatua sortuz, eta bestea bigarren ingurunean hedatzen da izpi errefraktatua sortuz.</p></td>
+              <td width="20%"><img src="..\Irudiak/Errefrakzioa.png" width="90%"></td>
+            </table>
+           </p><p>
+             Hiru lege daude errefrakzioarekin lotuta:
+             <ul>
+              <li>&nbsp&nbsp&nbsp <b style="color: #ffec3e;">⇨ 1 legea:</b> Uhin denak plano berean daude. (Uhin erasotzaileak eta zuzen normalak osatzen dutena)</li>
+              <li>&nbsp&nbsp&nbsp <b style="color: #ffec3e;">⇨ 2 legea:</b> Uhin erasotzailearen eta islatutakoaren angeluak berdinak dira. 
+                <b style="color: #ffec3e;">e=r</b></li>
+              <li>&nbsp&nbsp&nbsp <b style="color: #ffec3e;">⇨ Snell legea:</b> Eraso eta errefrakzio uhinen arteko erlazioa: 
+                <b style="color: #ffec3e;">n<sub>e</sub>·sin(e) = n<sub>r</sub>·sin(r)</b></li>
+            </ul></p><p>
+            Argiaren erradiazioa berdina da edozein ingurunetan. Uhin luzeera, aldiz, aldatu egiten da ingurune materialetan argi uhinak pilatzen direlako.
+            <i style="color:#ffec3e">$$ {n = \frac{c}{v}= \frac{λ_0f}{λf}= \frac{λ_0}{λ}} $$</i>
+            Hutsean argiaren abiadura berdina da edozein uhin luzerarentzat, ingurune materialetan aldiz abiadura uhin luzeraren menpe dago. Honela gertatzen dira, 
+            besteak beste, ostadarrak.
+           </p>
+           <p>
+             <table width="100%">
+               <td width="40%"><img src="..\Irudiak/Islapen totala (1).png" width="100%"></td>
+               <td width="60%"><p>Izpia ingurune azkarrago batera pasatzen denean angelua handitzen da.<br>Beraz, momentu baten errefrakzioa desagertuko
+              da eta izpi guztia islatuko da. <b style="color: #ffec3e;">$$ {n_e · sin(l) = n_r} $$</b></p>
+              <p align="center"><b style="color: #ffec3e;">l = mugako limitea (Islapen totala hasi)</b></p></td>
+             </table>
+           </p>
             <br><br><br>
 
-            <h3 style="color: #adadad;">&nbsp&nbsp&nbsp Uhinen ezaugarriak</h3>
-            <p>
+            <h3 style="color: #fcdd56;">&nbsp&nbsp&nbsp Argiaren izaera</h3>
+            <p>Argia batzuetan partikula bezala jokatzen du eta beste batzuetan uhin moduan.
             </p>
             <br><br><br>
 
-            <h3 style="color: #adadad;">&nbsp&nbsp&nbsp Uhinen erabilpen batzuk</h3>
+            <h3 style="color: #fcdd56;">&nbsp&nbsp&nbsp Polarizazioa</h3>
+            <p><img src="..\Irudiak/Polarizazio.png" width="90%">
+            <br>Argia polarizatzerakoan norabide bakarrean oszilatzen da, beraz, norabide honi perpendikularra den beste filtro bat jartzerakoan Argia
+            ez da oszilatuto, eta beraz, ez da ikusiko.</p>
+            <br><br><br>
+
+            <h3 style="color: #fcdd56;">&nbsp&nbsp&nbsp Soinu eta argiaren erteko antzekotasun eta desberdintasunak</h3>
             <p></p>
             <br><br><br><br><br>
         </blockquote></blockquote>
