--- a/HTML/1.4ebaluazioa.html
+++ b/HTML/1.4ebaluazioa.html
@@ -47,15 +47,25 @@
             Hutsean argiaren abiadura berdina da edozein uhin luzerarentzat, ingurune materialetan aldiz abiadura uhin luzeraren menpe dago. Honela gertatzen dira, 
             besteak beste, ostadarrak.
            </p>
+           <p>
+             <table width="100%">
+               <td width="40%"><img src="..\Irudiak/Islapen totala (1).png" width="100%"></td>
+               <td width="60%"><p>Izpia ingurune azkarrago batera pasatzen denean angelua handitzen da.<br>Beraz, momentu baten errefrakzioa desagertuko
+              da eta izpi guztia islatuko da. <b style="color: #ffec3e;">$$ {n_e · sin(l) = n_r} $$</b></p>
+              <p align="center"><b style="color: #ffec3e;">l = mugako limitea (Islapen totala hasi)</b></p></td>
+             </table>
+           </p>
             <br><br><br>
 
             <h3 style="color: #fcdd56;">&nbsp&nbsp&nbsp Argiaren izaera</h3>
-            <p>
+            <p>Argia batzuetan partikula bezala jokatzen du eta beste batzuetan uhin moduan.
             </p>
             <br><br><br>
 
             <h3 style="color: #fcdd56;">&nbsp&nbsp&nbsp Polarizazioa</h3>
-            <p></p>
+            <p><img src="..\Irudiak/Polarizazio.png" width="90%">
+            <br>Argia polarizatzerakoan norabide bakarrean oszilatzen da, beraz, norabide honi perpendikularra den beste filtro bat jartzerakoan Argia
+            ez da oszilatuto, eta beraz, ez da ikusiko.</p>
             <br><br><br>
 
             <h3 style="color: #fcdd56;">&nbsp&nbsp&nbsp Soinu eta argiaren erteko antzekotasun eta desberdintasunak</h3>
