--- a/Aiketak/ariketak.html
+++ b/Aiketak/ariketak.html
@@ -7,10 +7,10 @@
         <div class="circle"> <i class="fa">1</i></div>
         <div class="ribbon">Ariketak 1</div>
         </div></a>
-    <div class="badge orange">
+    <a target="_blank" href="https://drive.google.com/drive/folders/14Je-2na9poN3FQWXoqRHzdlZfGZIg-QP?usp=sharing"><div class="badge orange">
         <div class="circle"> <i class="fa ">2</i></div>
         <div class="ribbon">Ariketak 2</div>
-    </div>
+    </div></a>
     <div class="badge pink">
         <div class="circle"> <i class="fa">3</i></div>
         <div class="ribbon">Ariketak 3</div>
