--- a/HTML/1.5ebaluazioa.html
+++ b/HTML/1.5ebaluazioa.html
@@ -2,6 +2,8 @@
 
 <html>
     <head>
+        <title>Fisika</title>
+        <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/2497/2497631.png">
         <link rel="stylesheet" href="..\fisika.css">
         <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
@@ -13,32 +15,71 @@
         <h1 style="font-size: 100px;">Optika geometrikoa</h1>
         <blockquote><blockquote>
             <h3 style="color: #bc4af1;">&nbsp&nbsp&nbsp Sarrera eta definizioak</h3>
-            <p>
-            </p>
+            <p><b style="color: #da8bff;">Dioptrioa:</b> Bi inguruneen arteko gainzala.
+              <br><b style="color: #d780ff;">Sistema optikoa:</b> Dioptrio multzoa.
+              <br><br>Arauak:
+              <br>· Argi erasotzailea ezkerretik dator. ➝
+              <br>· Ezkerreko balioak negatiboak - &nbsp&nbsp | &nbsp&nbsp Eskuineak positiboak +
             <br><br><br>
-
-            <h3 style="color: #bc4af1;">&nbsp&nbsp&nbsp Errefrakziozko irudiak: Dioptrikoak</h3>
-            <br><br><br>
-
-            <h3 style="color: #bc4af1;">&nbsp&nbsp&nbsp Islapenezko irudiak: Ispiluak</h3>
-            <p>
-            </p>
+            <table width="50%" align="center">
+              <tr><td width="30%"></td><td width="30%"><p>Objetua1</p></td><td width="30%"><p>Irudia2</p></td></tr>
+              <tr><td width="30%"><p>Distantzia</p></td><td width="30%"><p>S₁</p></td><td width="30%"><p>S₂</p></td></tr>
+              <tr><td width="30%"><p>Tamaina</p></td><td width="30%"><p>y₁</p></td><td width="30%"><p>y₂</p></td></tr>
+              <tr><td width="30%"><p>Distantzia fokala</p></td><td width="30%"><p>f₁</p></td><td width="30%"><p>f₂</p></td></tr>
+              <tr><td width="30%"><p>Fokua</p></td><td width="30%"><p>F₁</p></td><td width="30%"><p>F₂</p></td></tr>
+            </table>
+            <br><br><b style="color: #c13bff;">Aberrazioak:</b> Mundu ideala eta errealaren arteko diferentzia.
+          </p>
             <br><br><br>
 
             <h3 style="color: #bc4af1;">&nbsp&nbsp&nbsp Lenteak</h3>
-            <p></p>
+            <p>Bi dioptriok (errefrakzio indize [n] desberdineko bi ingurune bereizten dituen gainazala) eratzen dute. Sitema honen bi inguruneek errefrakzio
+              indize berdina izan behar dute. <br><br>
+              <b style="color: #e5acff; font-size: 40px;">Lente Konbergenteak</b>
+              <br><b style="color: #c13bff;">↣ Paralelo datozen izpien luzapenak elkartzen dituzte.</b>
+              <br>↦ Meheagoak dira eskinatan, eta lodiagoak erdialdean.
+              <br>↦ Gezi bidez adierazten dira.
+              <br>↦ Distantzia fokal (f₁) +
+              <br>↦ Irudi fokua (f₂) lentearen ONDOREN.
+              <br><b style="color: #c13bff;">↣ Eratzen duten irudiak: ERREALAK.</b>
+              <br><br>
+              <b style="color: #e5acff; font-size: 40px;">Lente Dibergenteak</b>
+              <br><b style="color: #c13bff;">↣ Elkartzera doazen izpiak sakabanatzen dituzte.</b>
+              <br>↣ Lodiagoak dira eskinatan, eta meheagoak erdialdean.
+              <br>↣ Alderantzizko gezi bidez adierazten dira.
+              <br>↦ Distantzia fokal (f₁) -
+              <br>↦ Irudi fokua (f₂) lentearen AURRETIK.
+              <br><b style="color: #c13bff;">↣ Eratzen duten irudiak: BIRTUALAK.</b>
+            </p>
             <br><br><br>
 
-            <h3 style="color: #bc4af1;">&nbsp&nbsp&nbsp Aberrazioak</h3>
-            <p></p>
+            <h3 style="color: #bc4af1;">&nbsp&nbsp&nbsp Lenteekin sua piztu</h3>
+            <p>Sua pizteko erabiltzen diren lenetak <b style="color: #c13bff;">konbergenteak</b> dira eguzkitik heltzen zaizkigun izpiak 
+            paralelo heltzen direlako eta horiek elkartu beehar direlako. <br>Izpi paraleloak oso urruti dauden objetuetatik iristen dira.
+          </p>
             <br><br><br>
 
-            <h3 style="color: #bc4af1;">&nbsp&nbsp&nbsp Optikako tresna batzuen azterketa</h3>
-            <p></p>
+            <h3 style="color: #bc4af1;">&nbsp&nbsp&nbsp Fokuak eta lenteen potentzia</h3>
+            <p><b style="color: #c13bff;">· Foku irudia (F₂):</b> Infinitotik datozen izpi paraleloak elkartzen diren puntua.
+            <br><b style="color: #c13bff;">· Foku objetura (F₁):</b> F₂-tik ateratzen diren izpian lentea zeharkatzerakoan paraleloak izango dira
+          eta infinitoan elkartuko dira. (Kontrakoa)
+          <br><br>Fokuetatik lentera dagoen distantzia berdinak dira (f₁=f₂) BAINA konbergenteean f₁ negatiboa da eta dibergenteetan biak.</p>
+          <p><i style="color: #c13bff;">$$ {P ➟ \frac{1}{f₂}=\frac{1}{S₂}-\frac{1}{S₁} || \frac{1}{f₁}=\frac{1}{S₁}-\frac{1}{S₂}} $$</i>
+          <br>Potentzia <b style="color: #c13bff;">dioptriatan</b> (m<sup>-1</sup>) neurtzen da.
+          <br>Lente dibergenteek potzentzia negatiboa dute ez dutela konbergentetasunik.</p>
             <br><br><br>
+
+            <h3 style="color: #bc4af1;">&nbsp&nbsp&nbsp Handipena</h3>
+            <p>Handipena = Irudiaren tamaina / objetuaren tamaina
+            <br><i style="color: #c13bff;">$$ {A_L = \frac{y₂}{y₁}=\frac{S₂}{S₁}} $$</i>
+            Handipenetik atera daitezken ondorioak:
+          <br><b style="color: #c13bff;">⇢ Emaitza - denean:</b> Irudia buelta emanda egongo da.
+          <br><b style="color: #c13bff;">⇢ Emaitza-ren |Balio absolutoa| &gt 0 :</b> Irudia benetan dena baino handiago agertzen da.
+          <br><b style="color: #c13bff;">⇢ Lenteekin lan egiterakoan:</b> Irudia errealak ➞ Buelta emanda eta Irudi birtualak ➞ Irudi zuzenak.</p>
+            <br><br><br><br><br>
 
             <h3 style="color: #bc4af1;">&nbsp&nbsp&nbsp Begia</h3>
-            <p></p>
+            <p><center><img src="..\Irudiak/Uhinen hedapena.jpg" width="70%"></center></p>
             <br><br><br><br><br>
         </blockquote></blockquote>
         
