--- a/HTML/1.3ebaluazioa.html
+++ b/HTML/1.3ebaluazioa.html
@@ -21,15 +21,26 @@
             <br><br><br>
 
             <h3 style="color: #adadad;">&nbsp&nbsp&nbsp Soinua</h3>
+            <p>Ingurune material baten zehar gorputz elastiko baten bibrazioaren hedapena da.</p>
             <br><br><br>
 
             <h3 style="color: #adadad;">&nbsp&nbsp&nbsp Uhinen ezaugarriak</h3>
-            <p>
+            <p>Sonoritatea (Intentsitatea):
+              <br>Gogorrak edo ahulak izan daiteke. Gogorrek anplitude handia dute, eta ahulek txikia. Potentzia akustiko altuek tinpanoan mina edo
+              bere haustura sor dezakete. 
+              <br>Dezibelioa erabiltzen da intentsitatea neurtzeko.
+              <br><br>
+              Tonua:
+              <br>Soinu altuak (frekuentzia handi eta uhin luzer txikia) edo baxuak (frekuentzia txiki eta uhin luzera handia) dira.
+              <br>Pertsonen belarriak 20-20.000 Hz-tako soinuak entzun dezakete. Animalien belarriak desberdinak direnez beste tonu batzuetako
+              soinuak entzuteko gai dira.
+              <br>Infrasoinuak < 20Hz
+              <br>Ultrasoinuak > 20.000Hz
+              <br><br>
+              Tinbrea:
+              <br>Intentsitate eta tonu desberdineko baina iturri desberdinek egindako soinuen artean desberdintzen dira. Hau soinu uhinak puruak
+              ez direlako, konposatuak direlako, gertatzen da.
             </p>
-            <br><br><br>
-
-            <h3 style="color: #adadad;">&nbsp&nbsp&nbsp Uhinen erabilpen batzuk</h3>
-            <p></p>
             <br><br><br><br><br>
         </blockquote></blockquote>
         
