--- a/HTML/1.5ebaluazioa.html
+++ b/HTML/1.5ebaluazioa.html
@@ -39,16 +39,16 @@
               <br><b style="color: #c13bff;">↣ Paralelo datozen izpien luzapenak elkartzen dituzte.</b>
               <br>↦ Meheagoak dira eskinatan, eta lodiagoak erdialdean.
               <br>↦ Gezi bidez adierazten dira.
-              <br>↦ Distantzia fokal (f₁) +
-              <br>↦ Irudi fokua (f₂) lentearen ONDOREN.
+              <br>↦ Distantzia fokal (f₁) -
+              <br>↦ Irudi fokua (F₂) lentearen ONDOREN.
               <br><b style="color: #c13bff;">↣ Eratzen duten irudiak: ERREALAK.</b>
               <br><br>
               <b style="color: #e5acff; font-size: 40px;">Lente Dibergenteak</b>
               <br><b style="color: #c13bff;">↣ Elkartzera doazen izpiak sakabanatzen dituzte.</b>
               <br>↣ Lodiagoak dira eskinatan, eta meheagoak erdialdean.
               <br>↣ Alderantzizko gezi bidez adierazten dira.
-              <br>↦ Distantzia fokal (f₁) -
-              <br>↦ Irudi fokua (f₂) lentearen AURRETIK.
+              <br>↦ Distantzia fokal (f₁) +
+              <br>↦ Irudi fokua (F₂) lentearen AURRETIK.
               <br><b style="color: #c13bff;">↣ Eratzen duten irudiak: BIRTUALAK.</b>
             </p>
             <br><br><br>
@@ -78,9 +78,6 @@
           <br><b style="color: #c13bff;">⇢ Lenteekin lan egiterakoan:</b> Irudia errealak ➞ Buelta emanda eta Irudi birtualak ➞ Irudi zuzenak.</p>
             <br><br><br><br><br>
 
-            <h3 style="color: #bc4af1;">&nbsp&nbsp&nbsp Begia</h3>
-            <p><center><img src="..\Irudiak/Uhinen hedapena.jpg" width="70%"></center></p>
-            <br><br><br><br><br>
         </blockquote></blockquote>
         
 
