--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               <td><p align="center">Energia potentzial elastikoa: <br> <i style="color:coral">$$ {Epe = \frac{1}{2}kx^2} $$</i> <img width="70%" src="Irudiak/Hhs4.png"></p></td>
             </table><br>
             <p>Maximoak eta Em berdinak direnez (Ez + Epe batzerakoan karratuaren balio guztiak besteen maximoen berdinak dira):</p>
-            <p style="color:coral">$$ {Epe = \frac{1}{2}kA^2} $$</p>
+            <p style="color:coral">$$ {Em = \frac{1}{2}kA^2} $$</p>
             <br><br><br>
 
             <h3 style="color: #eb9046;">&nbsp&nbsp&nbsp Pendulu sinplea</h3>
