--- a/HTML/1.6ebaluazioa.html
+++ b/HTML/1.6ebaluazioa.html
@@ -14,15 +14,36 @@
         <blockquote><blockquote>
             <h3 style="color: #4bff5a;">&nbsp&nbsp&nbsp Grabitazio unibertsalaren legea</h3>
             <p>
+              <i style="color:#95ff3e">$$ {F = -G\frac{M·m}{r^2} û} $$</i>
+              Indarra masen biderkadurarekiko porportzionala, eta distantziaren karratuaren aurkakoa da.
+              <br><b style="color:#95ff3e">G: 6,67·10<sup>-11</sup> N (m<sup>2</sup>/kg<sup>2</sup>)</b>
             </p>
             <br><br><br>
 
             <h3 style="color: #4bff5a;">&nbsp&nbsp&nbsp Eremu grabitatorioa eta bere intentsitatea</h3>
+            <p>Gorputz batek inguruko gorputz guztiengan erakarpen indar bat eragiten du, lur planetarekin gertatzen den bezala. Hori eremu 
+              grabitario bta dagoelako gertatzen da.
+              Masa geroz eta handiago izan ahala erakarpen indarra handiagoa izango da.</p>
+              <br><center><p style="color:#95ff3e">Eremuaren intentsitatea:</p></center>
+              <p><i style="color:#95ff3e">$$ {g = \frac{F}{m} = G\frac{M}{r^2} } $$</i></p>
+                <center><p>r: m-tan</p></center>
             <br><br><br>
 
-            <h3 style="color: #4bff5a;">&nbsp&nbsp&nbsp Kepler-en legeak</h3>
+            <h3 style="color: #abff4b;">&nbsp&nbsp&nbsp Kepler-en legeak</h3>
             <p>
-            </p>
+              <b style="color: #53e95f; font-size: 30px;">1-Legea:</b>
+              Planetak eguzki inguruan egiten duten orbita eliptikoa da. Eguzkia foku batean aurkitzen da.
+              <br><b style="color: #53e95f; font-size: 30px;">2-Legea:</b>
+              Planetak orbitaren edozein puntuan egonda ere, eguzkiarekiko denbora unitateko betetzen duten azalera berdina da.
+              <br><b style="color: #53e95f; font-size: 30px;">3-Legea:</b>
+              Planeta bateko orbitaren edozein puntutako erakarpen indarra eta indar zentrifugoak berdinak dira.</p>
+              <p><i style="color:#95ff3e">$$ {Fg = Fz} $$</i>
+                <i style="color:#95ff3e">$$ {mg = m\frac{v^2}{r}} $$</i>
+                <i style="color:#95ff3e">$$ {G\frac{M·m}{r^2} = m\frac{v^2}{r}} $$</i></p>
+                <br><center><p>Hemendik honako adierazpen hauek lortu daitezke:<p></p></center>
+                <p><i style="color:#95ff3e">$$ {M = \frac{4·π^2·r^3}{T^2·G}} $$</i>
+                  <i style="color:#95ff3e">$$ {v =\sqrt\frac{G·M}{r}} $$</i>
+                  <i style="color:#95ff3e">$$ {T =\sqrt\frac{4·π^2·r^3}{M·G}} $$</i></p>
             <br><br><br>
 
             <h3 style="color: #4bff5a;">&nbsp&nbsp&nbsp Lana</h3>
@@ -30,7 +51,8 @@
             <br><br><br>
 
             <h3 style="color: #4bff5a;">&nbsp&nbsp&nbsp Energia</h3>
-            <p></p>
+            <p>Energia grputz batek lana egiteko duen ahalmena da.<br>Jouletan neurtzen da.<br>Energia mekanikoa potentziala eta 
+              zinetikoaren batura eginda lortzen da.</p>
             <br><br><br>
 
             <h3 style="color: #4bff5a;">&nbsp&nbsp&nbsp Energia zinetikoa</h3>
@@ -38,15 +60,29 @@
             <br><br><br>
 
             <h3 style="color: #4bff5a;">&nbsp&nbsp&nbsp Indar (eremu) kontserbakorrak</h3>
-            <p></p>
+            <p>Indar eremu batek gorputz batengan indar bat eragiten du. Eremu hori kontserbakorra izateko honako bi baldintzak bete behar ditu:
+              <br>1- Ibilbide itxian ez dute lanik egiten. Hau da gorputz bat v abiadurareki juartitzerakoan bueltatzen denean baiadura berdina iznago du.
+              <br>2- Eremuaren puntu batetik beste edozein puntura joateko egindako lana beti izango da berdina.</p>
             <br><br><br>
 
             <h3 style="color: #4bff5a;">&nbsp&nbsp&nbsp Energia potentziala</h3>
-            <p></p>
+            <p>Energia potentziala gorputz bat eremu kontserbakor baten barruan puntu batetik bestera joaterazkoan jasandako energia potentzialen aldaketa da.
+              <br>Gorputza eremu kontserbakorraren norabidean mugitzen bada lana positiboa da, energia potentzialaren aldaketa negatiboa da energia potentziala gutxitu egiten delako.
+              <br>Alidz, gorputza eremu kontserbakorraren aurka mugitzerazkoan lana negatiboa da, eta energia potentziala handitzen denez honen aldaketa postiboa izango da.
+            </p>
+            <p><i style="color:#95ff3e">$$ {U = -\frac{GMm}{r}} $$</i></p>
+            <p>Infinitoruntz doan gorputz baten energia potentziala 0 da.</p>
             <br><br><br>
 
             <h3 style="color: #4bff5a;">&nbsp&nbsp&nbsp Energia potentzial grabitatorioa</h3>
-            <p></p>
+            <p>Energia potentzial grabitatorioa ez dago ibilbidearekin lotuta, altuerarekin baizik.</p>
+            <p><i style="color:#95ff3e">$$ {E_p = -\frac{GMm}{r}} $$</i></p>
+            <p><i style="color:#95ff3e">$$ {E_p = -GMm(\frac{1}{R+h}-\frac{1}{R})} $$</i></p>
+            <br><br><br>
+
+            <h3 style="color: #4bff5a;">&nbsp&nbsp&nbsp Ihes abiadura</h3>
+            <p>Gorputz bat eremu grabitatorio batetik kanpora ateratzeko behar den abiadura da.</p>
+            <p><i style="color:#95ff3e">$$ {v_i = \sqrt\frac{2GM}{r}} $$</i></p>
             <br><br><br>
 
             <h3 style="color: #4bff5a;">&nbsp&nbsp&nbsp Energiaren (mekanikoa) kontserbazio printzipioa</h3>
