--- a/Aiketak/ariketak.html
+++ b/Aiketak/ariketak.html
@@ -11,23 +11,23 @@
         <div class="circle"> <i class="fa ">2</i></div>
         <div class="ribbon">Ariketak 2</div>
     </div></a>
-    <div class="badge blue-dark">
+    <div class="badge red">
         <div class="circle"> <i class="fa">8</i></div>
         <div class="ribbon">Ariketak 8</div>
     </div>
-    <div class="badge green">
+    <div class="badge purple">
         <div class="circle"> <i class="fa">9</i></div>
         <div class="ribbon">Ariketak 9</div>
     </div>
-    <div class="badge green-dark">
+    <div class="badge blue-dark">
         <div class="circle"> <i class="fa">10</i></div>
         <div class="ribbon">Ariketak 10</div>
     </div>
-    <div class="badge silver">
+    <div class="badge green">
         <div class="circle"> <i class="fa">11</i></div>
         <div class="ribbon">Ariketak 11</div>
     </div>
-    <div class="badge gold">
+    <div class="badge green-dark">
         <div class="circle"> <i class="fa">12</i></div>
         <div class="ribbon">Ariketak 12</div>
     </div>
