--- a/Aiketak/ariketak.html
+++ b/Aiketak/ariketak.html
@@ -11,10 +11,10 @@
         <div class="circle"> <i class="fa ">2</i></div>
         <div class="ribbon">Ariketak 2</div>
     </div></a>
-    <div class="badge red">
+    <a target="_blank" href="https://drive.google.com/drive/folders/1WAUGncbFV7RsdV5knPAxHeWjtoefWuUZ"><div class="badge red">
         <div class="circle"> <i class="fa">8</i></div>
         <div class="ribbon">Ariketak 8</div>
-    </div>
+        </div></a>
     <div class="badge purple">
         <div class="circle"> <i class="fa">9</i></div>
         <div class="ribbon">Ariketak 9</div>
