--- a/HTML/1.6ebaluazioa.html
+++ b/HTML/1.6ebaluazioa.html
@@ -2,6 +2,8 @@
 
 <html>
     <head>
+        <title>Fisika</title>
+        <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/2497/2497631.png">
         <link rel="stylesheet" href="..\fisika.css">
         <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
@@ -10,7 +12,7 @@
     <body>
 
         <br><br>
-        <h1 style="font-size: 100px;">Eremu grabitatorioa</h1>
+       <h1 style="font-size: 100px;">Eremu grabitatorioa</h1>
         <blockquote><blockquote>
             <h3 style="color: #4bff5a;">&nbsp&nbsp&nbsp Grabitazio unibertsalaren legea</h3>
             <p>
@@ -46,22 +48,19 @@
                   <i style="color:#95ff3e">$$ {T =\sqrt\frac{4·π^2·r^3}{M·G}} $$</i></p>
             <br><br><br>
 
-            <h3 style="color: #4bff5a;">&nbsp&nbsp&nbsp Lana</h3>
-            <p></p>
-            <br><br><br>
-
             <h3 style="color: #4bff5a;">&nbsp&nbsp&nbsp Energia</h3>
             <p>Energia grputz batek lana egiteko duen ahalmena da.<br>Jouletan neurtzen da.<br>Energia mekanikoa potentziala eta 
               zinetikoaren batura eginda lortzen da.</p>
             <br><br><br>
 
             <h3 style="color: #4bff5a;">&nbsp&nbsp&nbsp Energia zinetikoa</h3>
-            <p></p>
+            <p>Objetu baten higidurarekin lotura duen energia da.</p>
+            <p><i style="color:#95ff3e">$$ {Ez = \frac{1}{2}·mv^2} $$</i></p>
             <br><br><br>
 
             <h3 style="color: #4bff5a;">&nbsp&nbsp&nbsp Indar (eremu) kontserbakorrak</h3>
             <p>Indar eremu batek gorputz batengan indar bat eragiten du. Eremu hori kontserbakorra izateko honako bi baldintzak bete behar ditu:
-              <br>1- Ibilbide itxian ez dute lanik egiten. Hau da gorputz bat v abiadurareki juartitzerakoan bueltatzen denean baiadura berdina iznago du.
+              <br>1- Ibilbide itxian ez du lanik egiten. Hau da gorputz bat v abiadurarekin juartitzerakoan bueltatzen denean abiadura berdina izango du.
               <br>2- Eremuaren puntu batetik beste edozein puntura joateko egindako lana beti izango da berdina.</p>
             <br><br><br>
 
@@ -82,19 +81,20 @@
 
             <h3 style="color: #4bff5a;">&nbsp&nbsp&nbsp Ihes abiadura</h3>
             <p>Gorputz bat eremu grabitatorio batetik kanpora ateratzeko behar den abiadura da.</p>
-            <p><i style="color:#95ff3e">$$ {v_i = \sqrt\frac{2GM}{r}} $$</i></p>
-            <br><br><br>
-
-            <h3 style="color: #4bff5a;">&nbsp&nbsp&nbsp Energiaren (mekanikoa) kontserbazio printzipioa</h3>
-            <p></p>
+            <p><i style="color:#95ff3e">$$ {Em = kte} $$</i>
+              <i style="color:#95ff3e">$$ {v_i = \sqrt\frac{2GM}{r}} $$</i></p>
             <br><br><br>
 
             <h3 style="color: #4bff5a;">&nbsp&nbsp&nbsp Indar lerroak</h3>
-            <p></p>
-            <br><br><br>
-
-            <h3 style="color: #4bff5a;">&nbsp&nbsp&nbsp Newton-en ereduaren ondorio eta aplikazioak</h3>
-            <p></p>
+            <p>Eremu grabitatorioa adierazten dute.
+              <br><b style="color:#7bff3e">Potentzial grabitatorioa:</b> Masa bat infinitura eramateko eremu grabitatorioak egin behar duen lana da.
+            </p>
+            <p><i style="color:#95ff3e">$$ {V = \frac{Ep}{m} = -G\frac{M}{r}} $$</i></p>
+            <p><b style="color:#7bff3e">Gainazal ekipotentziala:</b> Potentzial grabitatorio berdina duten puntu guztiek eratzen dute.
+              <br>Hauek zenbat eta pilatuago egon geroz eta indartsuagoa izango da eremua. Beraz, eremuaren intentsitatea handiagoa izango da.
+              Horrez gain, geroz eta masa gehiago egon geroz eta deformatuago egongo dira indar-lerroak.
+            </p>
+            <p><i style="color:#95ff3e">$$ {V = V_1 + V_2 + ...} $$</i></p>
             <br><br><br><br><br>
         </blockquote></blockquote>
         
