--- a/HTML/1.7ebaluazioa.html
+++ b/HTML/1.7ebaluazioa.html
@@ -2,6 +2,8 @@
 
 <html>
     <head>
+        <title>Fisika</title>
+        <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/2497/2497631.png">
         <link rel="stylesheet" href="..\fisika.css">
         <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
