--- a/Aiketak/ariketak.html
+++ b/Aiketak/ariketak.html
@@ -15,10 +15,10 @@
         <div class="circle"> <i class="fa">8</i></div>
         <div class="ribbon">Ariketak 8</div>
         </div></a>
-    <div class="badge purple">
+    <a target="_blank" href="https://drive.google.com/drive/folders/11TSKznwffelUU9UHMYqLqh46-vOiexKM?usp=sharing"><div class="badge purple">
         <div class="circle"> <i class="fa">9</i></div>
         <div class="ribbon">Ariketak 9</div>
-    </div>
+    </div></a>
     <div class="badge blue-dark">
         <div class="circle"> <i class="fa">10</i></div>
         <div class="ribbon">Ariketak 10</div>
