--- a/Aiketak/ariketak.html
+++ b/Aiketak/ariketak.html
@@ -5,30 +5,30 @@
 <div class="main-wrapper">
     <a target="_blank" href="https://drive.google.com/drive/folders/1fMc0n-eiS4rNEeMCFX1szTiwG9ThDWCN"><div class="badge yellow">
         <div class="circle"> <i class="fa">1</i></div>
-        <div class="ribbon">Ariketak 1</div>
+        <div class="ribbon">1 GAIA</div>
         </div></a>
     <a target="_blank" href="https://drive.google.com/drive/folders/1Yhf8rZDXLL6kldpo-SE1nsK30kNZyuur?usp=sharing"><div class="badge orange">
         <div class="circle"> <i class="fa ">2</i></div>
-        <div class="ribbon">Ariketak 2</div>
+        <div class="ribbon">2 GAIA</div>
     </div></a>
     <a target="_blank" href="https://drive.google.com/drive/folders/1WAUGncbFV7RsdV5knPAxHeWjtoefWuUZ"><div class="badge red">
         <div class="circle"> <i class="fa">8</i></div>
-        <div class="ribbon">Ariketak 8</div>
+        <div class="ribbon">8 GAIA</div>
         </div></a>
     <a target="_blank" href="https://drive.google.com/drive/folders/11TSKznwffelUU9UHMYqLqh46-vOiexKM?usp=sharing"><div class="badge purple">
         <div class="circle"> <i class="fa">9</i></div>
-        <div class="ribbon">Ariketak 9</div>
+        <div class="ribbon">9 GAIA</div>
     </div></a>
-    <div class="badge blue-dark">
+    <a target="_blank" href="https://drive.google.com/drive/u/0/folders/1Ei7kN3Dq6sGteW6lkR80hwo4yTjbaLFz"><div class="badge blue-dark">
         <div class="circle"> <i class="fa">10</i></div>
-        <div class="ribbon">Ariketak 10</div>
-    </div>
+        <div class="ribbon">10 GAIA</div>
+    </div></a>
     <div class="badge green">
         <div class="circle"> <i class="fa">11</i></div>
-        <div class="ribbon">Ariketak 11</div>
+        <div class="ribbon">11 GAIA</div>
     </div>
     <div class="badge green-dark">
         <div class="circle"> <i class="fa">12</i></div>
-        <div class="ribbon">Ariketak 12</div>
+        <div class="ribbon">12 GAIA</div>
     </div>
 </div>
