--- a/Aiketak/ariketak.html
+++ b/Aiketak/ariketak.html
@@ -27,8 +27,8 @@
         <div class="circle"> <i class="fa">11</i></div>
         <div class="ribbon">11 GAIA</div>
     </div>
-    <div class="badge green-dark">
+    <a target="_blank" href="https://drive.google.com/drive/folders/1duPjvWpyq0h3uMFYeBgbvJbQNfgDJxrS?usp=sharing"><div class="badge green-dark">
         <div class="circle"> <i class="fa">12</i></div>
         <div class="ribbon">12 GAIA</div>
-    </div>
+    </div></a>
 </div>
