--- a/Aiketak/ariketak.html
+++ b/Aiketak/ariketak.html
@@ -23,10 +23,10 @@
         <div class="circle"> <i class="fa">10</i></div>
         <div class="ribbon">10 GAIA</div>
     </div></a>
-    <div class="badge green">
+    <a target="_blank" href="https://drive.google.com/drive/folders/1--IKXt49ICU1p13r6hdkytbRyArKgCIA"><div class="badge green">
         <div class="circle"> <i class="fa">11</i></div>
         <div class="ribbon">11 GAIA</div>
-    </div>
+    </div></a>
     <a target="_blank" href="https://drive.google.com/drive/folders/1duPjvWpyq0h3uMFYeBgbvJbQNfgDJxrS?usp=sharing"><div class="badge green-dark">
         <div class="circle"> <i class="fa">12</i></div>
         <div class="ribbon">12 GAIA</div>
